kustomizations/app/base/reference-jaeger-agent.yaml
##
##
##

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: adservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: cartservice
# spec:
#   template:
#     spec:
#       containers:
#       - name: server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: checkoutservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: currencyservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: emailservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
# apiVersion: apps/v1
# kind: Deployment
# metadata:
#   name: paymentservice
# spec:
#   template:
#     spec:
#       containers:
#       - name: server

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: productcatalogservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: recommendationservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: shippingservice
  annotations:
    "sidecar.jaegertracing.io/inject": "true"
spec:
  template:
    spec:
      containers:
      - name: server
