kustomizations/app/base/tune-loadgenerator.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: loadgenerator
spec:
  template:
    spec:
      containers:
      - name: main
